Separate max imports from max exports (#338)
* More macrofization and terms

* Separate max imports from max exports

* Move a TODO

--- a/preamble.tex
+++ b/preamble.tex
@@ -160,14 +160,18 @@
 \newcommand*{\xtpreimages}{\mathbf{E}_P}
 
 % TODO: Use non-prefixed items for common fields:
-\newcommand*{\¬gaslimit}{g} % also used for ¬refgaslimit
-\newcommand*{\¬service}{s} % also used for ¬avspec
+\newcommand*{\¬gaslimit}{g}
+\newcommand*{\¬gasused}{u}
+\newcommand*{\¬service}{s}
 \newcommand*{\¬payloadhash}{y}
 \newcommand*{\¬payload}{\mathbf{y}}
 \newcommand*{\¬result}{\mathbf{d}}
 \newcommand*{\¬authtrace}{\mathbf{o}}
-\newcommand*{\¬core}{c} % also used for ¬codehash
-\newcommand*{\¬authorizer}{a} % also used for ¬accgaslimit
+\newcommand*{\¬core}{c} % O/L ¬codehash
+\newcommand*{\¬authorizer}{a} % O/L ¬accgaslimit
+\newcommand*{\¬codehash}{h} % O/L \ot¬packagehash
+\newcommand*{\¬exportcount}{e}
+\newcommand*{\¬importcount}{i}
 
 \newcommand*{\wp¬authtoken}{\mathbf{j}}
 \newcommand*{\wp¬authcodehost}{h}
@@ -181,43 +185,43 @@
 \newcommand*{\wp¬metadata}{\mathbf{m}}
 
 \newcommand*{\wi¬service}{\¬service}
-\newcommand*{\wi¬codehash}{c}
+\newcommand*{\wi¬codehash}{\¬codehash}
 \newcommand*{\wi¬payload}{\¬payload}
-\newcommand*{\wi¬refgaslimit}{g}
-\newcommand*{\wi¬accgaslimit}{a}
-\newcommand*{\wi¬exportsegments}{e}
+\newcommand*{\wi¬refgaslimit}{g} % O/L ¬gaslimit TODO: use r instead
+\newcommand*{\wi¬accgaslimit}{a} % O/L ¬authorizer
+\newcommand*{\wi¬exportcount}{\¬exportcount}
 \newcommand*{\wi¬importsegments}{\mathbf{i}}
 \newcommand*{\wi¬extrinsics}{\mathbf{x}}
 
-\newcommand*{\wr¬avspec}{s}
+\newcommand*{\wr¬avspec}{s} % O/L ¬service TODO: make bold
 \newcommand*{\wr¬context}{x} % TODO: Consider renaming to \mathbf{c} and/or making bold, like package
 \newcommand*{\wr¬core}{\¬core}
 \newcommand*{\wr¬authorizer}{\¬authorizer}
 \newcommand*{\wr¬srlookup}{\mathbf{l}}
 \newcommand*{\wr¬authtrace}{\¬authtrace} % TODO: Consider renaming to \mathbf{u} to free up \mathbf{o}
-\newcommand*{\wr¬digests}{\mathbf{r}} % TODO: Consider renaming to avoid overloading \mathbf{r} reports vs results; maybe \mathbf{t} for results
+\newcommand*{\wr¬digests}{\mathbf{r}} % TODO: Consider renaming to \mathbf{t}/{g} avoid overloading \mathbf{r} reports vs results; maybe \mathbf{t} for results
 \newcommand*{\wr¬authgasused}{g}
 % TODO: Standardize and fully check this:
 % p P: work Packages
 % w I: work Items
 % w W: work Reports
-% r L: work resulTs
+% r L: work resulTs -> Digests TODO: Rename d D
 % d: work output data (digest)
 % y: work payload
 
 \newcommand*{\wl¬service}{\¬service}
-\newcommand*{\wl¬codehash}{c}
+\newcommand*{\wl¬codehash}{\¬codehash}
 \newcommand*{\wl¬payloadhash}{\¬payloadhash}
 \newcommand*{\wl¬gaslimit}{\¬gaslimit}
 \newcommand*{\wl¬result}{\¬result}
-\newcommand*{\wl¬gasused}{u}
-\newcommand*{\wl¬imports}{i}
+\newcommand*{\wl¬gasused}{\¬gasused}
+\newcommand*{\wl¬importcount}{\¬importcount}
 \newcommand*{\wl¬xtcount}{x}
 \newcommand*{\wl¬xtsize}{z}
-\newcommand*{\wl¬exports}{e}
+\newcommand*{\wl¬exportcount}{\¬exportcount}
 
-\newcommand*{\ot¬packagehash}{h}
-\newcommand*{\ot¬segroot}{e}
+\newcommand*{\ot¬packagehash}{h} % O/L ¬codehash TODO: RENAME to k
+\newcommand*{\ot¬segroot}{e} % O/L ¬exprotcount TODO: RENAME to r?
 \newcommand*{\ot¬authorizer}{\¬authorizer}
 \newcommand*{\ot¬authtrace}{\¬authtrace}
 \newcommand*{\ot¬payloadhash}{\¬payloadhash}
