--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -50,9 +50,9 @@
   \item[$\mathbb{I}$] The set of work items. See equation \ref{eq:workitem}.
   \item[$\mathbb{J}$] The set of work execution errors.
   \item[$\mathbb{K}$] The set of validator key-sets. See equation \ref{eq:validatorkeys}.
-  \item[$\mathbb{L}$] The set of work results.
+  \item[$\mathbb{L}$] The set of work-digests.
   \item[$\mathbb{M}$] The set of \textsc{pvm} \textsc{ram} states. See equation \ref{eq:pvmmemory}.
-  \item[$\operandtuple$] The accumulation operand element, corresponding to a single work result.
+  \item[$\operandtuple$] The accumulation operand element, corresponding to a single work-item.
   \item[$\mathbb{P}$] The set of work-packages. See equation \ref{eq:workpackage}.
   \item[$\avspec$] The set of availability specifications.
   \item[$\mathbb{T}$] The set of deferred transfers.
@@ -80,7 +80,7 @@
 %  \item[$\gascounter$] Unused. %	Θ
 %  \item[$\Pi$] Unused. %	Π
   \item[$\Lambda$] The historical lookup function. See equation \ref{eq:historicallookup}. % Λ
-  \item[$\Xi$] The work result computation function. See equation \ref{eq:workdigestfunction}. %	Ξ
+  \item[$\Xi$] The work-digest computation function. See equation \ref{eq:workdigestfunction}. %	Ξ
   \item[$\Upsilon$] The general state transition function. See equations \ref{eq:statetransition}, \ref{eq:transitionfunctioncomposition}. %	ϒ
 %  \item[$\Sigma$] Unused. %	Σ
   \item[$\Phi$] The key-nullifier function. See equation \ref{eq:blacklistfilter}. %	Φ
@@ -288,10 +288,11 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{W}_C = 4,000,000$] The maximum size of service code in octets.
   \item[$\mathsf{W}_E = 684$] The basic size of erasure-coded pieces in octets. See equation \ref{eq:erasurecoding}.
   \item[$\mathsf{W}_G = \mathsf{W}_P\mathsf{W}_E = 4104$] The size of a segment in octets.
-  \item[$\mathsf{W}_M = 3,072$] The maximum number of imports and exports in a work-package.
+  \item[$\mathsf{W}_M = 3,072$] The maximum number of imports in a work-package.
   \item[$\mathsf{W}_P = 6$] The number of erasure-coded pieces in a segment.
   \item[$\mathsf{W}_R = 48\cdot2^{10}$] The maximum total size of all unbounded blobs in a work-report, in octets.
   \item[$\mathsf{W}_T = 128$] The size of a transfer memo in octets.
+  \item[$\mathsf{W}_X = 3,072$] The maximum number of exports in a work-package.
   \item[$\mathsf{X}$] Context strings, see below.
   \item[$\mathsf{Y} = 500$] The number of slots into an epoch at which ticket-submission ends.
   \item[$\mathsf{Z}_A = 2$] The \textsc{pvm} dynamic address alignment factor. See equation \ref{eq:jumptablealignment}.
