--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -164,7 +164,7 @@ And $\fnprovide$ is the preimage integration function, which transforms a dictio
       s \in \keys{\mathbf{d}},\;
       \mathbf{d}[s]_\mathbf{l}[\hash(\mathbf{i}), |\mathbf{i}|] = \sq{}:\\
     &\qquad \mathbf{d}'[s]_\mathbf{l}[\hash(\mathbf{i}), |\mathbf{i}|] = \tau'\\
-    &\qquad \mathbf{d}'[s]_\mathbf{p}[\hash{\mathbf{i}}] = \mathbf{i}
+    &\qquad \mathbf{d}'[s]_\mathbf{p}[\hash(\mathbf{i})] = \mathbf{i}
     %\begin{aligned}
     %  \tup{s, \mathbf{i}} \in \mathbf{p} \wedge
     %  s \in \keys{\mathbf{d}}\;\wedge& \\
