--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -651,7 +651,7 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_\Aries(\gascounter, \registers, \memory, (\mathbf{x}, \mathbf{y}), s)$ \\
-  \texttt{provide} = \_ \\
+  \texttt{provide} = 27 \\
   $g = 10$} &
   $\begin{aligned}
     \using [o, z] &= \registers_{8 \dots+ 3} \\
