--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -162,7 +162,7 @@ And $\fnprovide$ is the preimage integration function, which transforms a dictio
     &\quad\forall \tup{s, \mathbf{i}} \in \mathbf{p},\;
       s \in \keys{\mathbf{d}},\;
       \mathbf{d}[s]_\mathbf{l}[\hash(\mathbf{i}), |\mathbf{i}|] = \sq{}:\\
-    &\qquad \mathbf{d}'[s]_\mathbf{l}[\hash(\mathbf{i}), |\mathbf{i}|] = \tau'\\
+    &\qquad \mathbf{d}'[s]_\mathbf{l}[\hash(\mathbf{i}), |\mathbf{i}|] = [\tau']\\
     &\qquad \mathbf{d}'[s]_\mathbf{p}[\hash(\mathbf{i})] = \mathbf{i}
     %\begin{aligned}
     %  \tup{s, \mathbf{i}} \in \mathbf{p} \wedge
