Fixes provide host function
Fixes provide host function.
- setting registers
- setting `bold_d` (service dictionary)

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -654,7 +654,8 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
   \texttt{provide} = 27 \\
   $g = 10$} &
   $\begin{aligned}
-    \using [o, z] &= \registers_{8 \dots+ 3} \\
+    \using [o, z] &= \registers_{8, 9} \\
+    \using \mathbf{d} &= (\mathbf{x}_\mathbf{u})_\mathbf{d}\\
     \using s^* &= \begin{cases}
       s &\when \registers_7 = 2^{64} - 1 \\
       \registers_7 &\otherwise
